--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -795,6 +796,44 @@ select {
     margin-top: 5px;
 }
 
+#customModal {
+            font-family:Quicksand;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #a8f0c6;
+            box-shadow: 0 0 15px 5px #ccc;
+            border-radius:5px;
+            z-index: 1000;
+}
+#customModalFail {
+
+            font-family:Quicksand;
+
+            display: none;
+
+            position: fixed;
+
+            top: 50%;
+
+            left: 50%;
+
+            transform: translate(-50%, -50%);
+
+            padding: 20px;
+
+            background-color: #f7afa3;
+
+            box-shadow: 0 0 15px 5px #ccc;
+
+            border-radius:5px;
+
+            z-index: 1000;
+
+	}
 /* responsivitÃ© a 1880 */
 
 @media screen and (max-width: 1880px) {
@@ -828,6 +867,45 @@ select {
             width: 64px;
             padding: 0px 5px;
          
+}
+
+#customModal {
+            font-family:Quicksand;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #a8f0c6;
+            box-shadow: 0 0 15px 5px #ccc;
+            border-radius:5px;
+            z-index: 1000;
+}
+#customModalFail {
+
+            font-family:Quicksand;
+
+            display: none;
+
+            position: fixed;
+
+            top: 50%;
+
+            left: 50%;
+
+            transform: translate(-50%, -50%);
+
+            padding: 20px;
+
+            background-color: #f7afa3;
+
+            box-shadow: 0 0 15px 5px #ccc;
+
+            border-radius:5px;
+
+            z-index: 1000;
+
 }
 /* responsivitÃ© a 1762 */
 
@@ -946,6 +1024,45 @@ select {
             padding: 0px 5px;
           
 }
+
+#customModal {
+            font-family:Quicksand;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #a8f0c6;
+            box-shadow: 0 0 15px 5px #ccc;
+            border-radius:5px;
+            z-index: 1000;
+}
+#customModalFail {
+
+            font-family:Quicksand;
+
+            display: none;
+
+            position: fixed;
+
+            top: 50%;
+
+            left: 50%;
+
+            transform: translate(-50%, -50%);
+
+            padding: 20px;
+
+            background-color: #f7afa3;
+
+            box-shadow: 0 0 15px 5px #ccc;
+
+            border-radius:5px;
+
+            z-index: 1000;
+
+}
         
 /* responsivitÃ© a 11468 */
 
@@ -1038,6 +1155,45 @@ select {
             width: 64px;
             padding: 0px 5px;
 }
+
+#customModal {
+            font-family:Quicksand;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #a8f0c6;
+            box-shadow: 0 0 15px 5px #ccc;
+            border-radius:5px;
+            z-index: 1000;
+}
+#customModalFail {
+
+            font-family:Quicksand;
+
+            display: none;
+
+            position: fixed;
+
+            top: 50%;
+
+            left: 50%;
+
+            transform: translate(-50%, -50%);
+
+            padding: 20px;
+
+            background-color: #f7afa3;
+
+            box-shadow: 0 0 15px 5px #ccc;
+
+            border-radius:5px;
+
+            z-index: 1000;
+
+}
 /* responsivitÃ© a 1300 */
 
 @media screen and (max-width: 1300px) {
@@ -1087,6 +1243,45 @@ select {
         .footer__bottom__box__right {
             width: 64px;
             padding: 0px 5px;
+}
+
+#customModal {
+            font-family:Quicksand;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #a8f0c6;
+            box-shadow: 0 0 15px 5px #ccc;
+            border-radius:5px;
+            z-index: 1000;
+}
+#customModalFail {
+
+            font-family:Quicksand;
+
+            display: none;
+
+            position: fixed;
+
+            top: 50%;
+
+            left: 50%;
+
+            transform: translate(-50%, -50%);
+
+            padding: 20px;
+
+            background-color: #f7afa3;
+
+            box-shadow: 0 0 15px 5px #ccc;
+
+            border-radius:5px;
+
+            z-index: 1000;
+
 }
 /* responsivitÃ© a 1208 */
 
@@ -1182,6 +1377,45 @@ select {
             padding: 0px 5px;
 }
 
+#customModal {
+            font-family:Quicksand;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #a8f0c6;
+            box-shadow: 0 0 15px 5px #ccc;
+            border-radius:5px;
+            z-index: 1000;
+}
+#customModalFail {
+
+            font-family:Quicksand;
+
+            display: none;
+
+            position: fixed;
+
+            top: 50%;
+
+            left: 50%;
+
+            transform: translate(-50%, -50%);
+
+            padding: 20px;
+
+            background-color: #f7afa3;
+
+            box-shadow: 0 0 15px 5px #ccc;
+
+            border-radius:5px;
+
+            z-index: 1000;
+
+}
+
 /* responsivitÃ© a 1185 */
 
 @media screen and (max-width: 1185px) {
@@ -1226,6 +1460,45 @@ select {
         .footer__bottom__box__right {
             width: 64px;
             padding: 0px 5px;
+}
+
+#customModal {
+            font-family:Quicksand;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #a8f0c6;
+            box-shadow: 0 0 15px 5px #ccc;
+            border-radius:5px;
+            z-index: 1000;
+}
+#customModalFail {
+
+            font-family:Quicksand;
+
+            display: none;
+
+            position: fixed;
+
+            top: 50%;
+
+            left: 50%;
+
+            transform: translate(-50%, -50%);
+
+            padding: 20px;
+
+            background-color: #f7afa3;
+
+            box-shadow: 0 0 15px 5px #ccc;
+
+            border-radius:5px;
+
+            z-index: 1000;
+
 }
 /* responsivitÃ© a 1064 */
 
