--- a/style.css
+++ b/style.css
@@ -795,7 +795,74 @@ select {
     border-radius: 5px;
     margin-top: 5px;
 }
+h3 {
+  font-family: Quicksand;
+}
 
+.alert {
+  box-sizing:border-box;
+  width: 50%;
+  margin: 20px auto;
+  padding: 30px;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0 0 15px 5px #ccc;
+}
+
+.close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  opacity: 0.5;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 50%;
+  right: 15px;
+  top: 25px;
+  text-align: center;
+  font-size: 1.6em;
+  cursor: pointer;
+}
+
+.alert.simple-alert {
+  background-color: #ebebeb;
+  border-left: 5px solid #bfbfbf;
+}
+
+.alert.simple-alert .close {
+  border-color: #bfbfbf;
+  color: #bfbfbf;
+}
+
+.alert.success-alert {
+  background-color: #a8f0c6;
+  border-left: 5px solid #64c288;
+}
+
+.alert.success-alert .close {
+  border-color: #64c288;
+  color: #64c288;
+}
+
+.alert.danger-alert {
+  background-color: #f7a7a3;
+  border-left: 5px solid #d87067;
+}
+
+.alert.danger-alert .close {
+  border-color: #d87067;
+  color: #d87067;
+}
+
+.alert.warning-alert {
+  background-color: #ffd48a;
+  border-left: 5px solid #e0b15d;
+}
+
+.alert.warning-alert .close {
+  border-color: #e0b15d;
+  color: #e0b15d;
+}
 
 /* responsivitÃ© a 1880 */
 
